# MinesweeperZK

./: DEMO_SCRIPT.md  README.md  SCORING.md  TESTING_PLAN.md  VERIFICATION_REPORT.md  WAKE_UP_REPORT.md  database.rules.json  firebase.json
.claude/: settings.local.json
backend/firebase/: config.ts  room-service.ts
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  page.tsx
frontend/components/: gameplay-arena.tsx  landing-page.tsx  lobby-page.tsx  summary-verdict.tsx  zk-proof-display.tsx
frontend/components/game/: game-board.tsx  game-board.tsx.bak  game-cell.tsx  game-cell.tsx.bak  game-container.tsx  game-hud.tsx  index.ts  notification.tsx
frontend/components/multiplayer/: commit-reveal-page.tsx  seed-commitment-flow.tsx
frontend/components/performance/: performance-dashboard.tsx
frontend/components/ui/: error-boundary.tsx  loading-skeleton.tsx  loading-spinner.tsx
frontend/hooks/: use-contract-game.ts  use-firebase-game-with-perf.ts  use-firebase-game.ts  use-firebase-room.ts  use-minesweeper-game.ts
frontend/hooks/__tests__/: use-firebase-game.test.ts  use-firebase-room.test.ts
frontend/hooks/performance/: use-performance.ts
frontend/lib/bindings && cp -r DProjekanMacam2HackathonMinesweeper-ZKsmart-contractbindingsmock_game_hub DProjekanMacam2HackathonMinesweeper-ZKfrontendlibbindings/: README.md  package.json
smart-contract/: .env.example  Cargo.toml  deployment.json
smart-contract/risc-zero/guest/: Cargo.toml
smart-contract/risc-zero/guest/src/: minesweeper.rs
(+41 files in other folders)
