[package]
name = "minesweeper-zk-guest"
version = "0.1.0"
edition = "2021"

[lib]
name = "minesweeper_zk_guest"
path = "src/minesweeper.rs"

[dependencies]
# RISC Zero ZKVM
risc0-zkvm = { version = "1.0", default-features = false, features = ["guest"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
